Fixed whitespace handling, default options, and passing pipe values to commands anyway

--- a/popup.css
+++ b/popup.css
@@ -121,6 +121,7 @@ pre {
     clear: both;
     text-align: left;
     color: white;
+    white-space: pre-wrap;
 }
 /*
 #ubiq-result-panel.result {
